# shirobaseweb

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  improvements.txt  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: django.yml
apps/accounts/: admin.py  forms.py  views.py
apps/accounts/tests/: test_forms.py  test_views.py
apps/api/accounts/: serializers.py  urls.py  views.py
apps/api/accounts/tests/: endpoint_tests.py
apps/api/users/: serializers.py  urls.py  views.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
django_project/: middleware.py  permissions.py  settings.py  test_settings.py  urls.py
static/: allauth-styles.css
templates/: index.html
templates/account/: base_entrance.html  base_manage.html  password_change.html  password_set.html  phone_change.html  profile.html
